--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  width: 300рx;
+  height: 30px;
+  padding: 10px;
+  margin: 20px;
+  font-size: 18px;
+  border-radius: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:disabled {
+  padding: 10px 20px;
+  font-size: 18px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button:enabled {
+  background-color: blue;
   color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.details {
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.back {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
